cucumber configuration and AcceptanceTest